--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
       "floro"
     ],
     "outDir": "dist",
-    "types": ["node", "jest"],
-    "typeRoots" : ["node_modules/@types"],
+    "types": ["node", "jest"]
   },
   "exclude": [
     "node_modules",
