--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@floro/text-generator",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "main": "./dist/cjs/src/index.js",
   "module": "./src/esm/src/index.js",
   "types": "./dist/types/src/index.d.ts",
@@ -26,13 +26,13 @@
     "@types/jest": "^29.5.5",
     "@types/node": "^18.11.17",
     "jest": "^29.1.2",
+    "memfs": "^3.4.7",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "memfs": "^3.4.7",
-    "quicktype-core": "^23.0.71",
-    "ts-node": "^10.9.1"
+    "quicktype-core": "^23.0.71"
   }
 }
