--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@floro/text-generator",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "main": "./dist/cjs/src/index.js",
   "module": "./src/esm/src/index.js",
   "types": "./dist/types/src/index.d.ts",
@@ -10,6 +10,12 @@
       "import": "./dist/esm/src/index.js",
       "require": "./dist/cjs/src/index.js",
       "default": "./src/index.ts"
+    },
+    "./get-json": {
+      "types": "./dist/types/src/get-json.d.ts",
+      "import": "./dist/esm/src/get-json.js",
+      "require": "./dist/cjs/src/get-json.js",
+      "default": "./src/get-json.ts"
     }
   },
   "scripts": {
